--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1634438406
+dateModified: 1634444276
 email:
   fromEmail: hello.anthony9898@gmail.com
   fromName: animeblog
@@ -10,6 +10,7 @@ meta:
     5dcc4492-44cb-41c4-ae05-b3ddf1a3a30e: homepage # homepage
     7c6b5301-0488-4387-aa01-f7647b06adb7: 'Full Name' # Full Name
     24fe3dda-887d-4ed5-abe1-b81d2fbe3747: Home # Home
+    47eb96c9-25e4-4a1d-b1a7-252a7e0ec51a: 'Stories Listing' # Stories Listing
     406b8fbd-0fdb-4b7e-8c1c-5dc5169b1953: rider # rider
     615d6b30-3f80-4bbb-9001-2b6a837b5799: Uploads # Uploads
     964b9a3d-09e2-4e5a-b37c-1bc6395ba105: Stories # Stories
@@ -17,6 +18,7 @@ meta:
     a56ee105-79cd-4eb6-8bc3-802eeaf7c2e0: 'Hero Image' # Hero Image
     a417ce34-1516-4242-b7d0-5c5a63e432e2: Riders # Riders
     aa49cf5b-be62-4d34-96e9-52b77d71e617: animeblog # animeblog
+    b1e68985-e03b-44ac-a744-0be134efd3c7: 'Stories Listing' # Stories Listing
     b7baa9f4-57bc-4de9-ad3a-951758a852d2: Description # Description
     bd41ba20-0388-4350-a211-f8956fbf7921: Photos # Photos
     c87ea9bd-d993-49b2-9ac3-0bf447777d31: Common # Common
